<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/chat"
        android:fontFamily="@font/roboto"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/search_tutors"
        android:fontFamily="@font/roboto"
        android:icon="@drawable/ic_search"
        android:title="@string/tutors_txt" />
    <item
        android:id="@+id/home"
        android:fontFamily="@font/roboto"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/categories_txt" />
    <item
        android:id="@+id/request"
        android:fontFamily="@font/roboto"
        android:icon="@drawable/ic_send"
        android:title="@string/requests_txt" />
    <item
        android:id="@+id/perfil"
        android:fontFamily="@font/roboto"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_txt" />
</menu>