<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtributesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/blackMate"
        android:textSize= "@dimen/title_text"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/tutor_profile"
        app:navigationIcon="@drawable/ic_keyboard_arrow_left"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textEducacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/education_txt"
                    android:textSize="@dimen/subtitle_text"
                    android:textColor="@color/blackMate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:fontFamily="@font/roboto"
                    android:text="@string/ex_education"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/soft_grey" />
            </LinearLayout>

            <EditText
                android:id="@+id/educacion_tutor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/edittext_border"
                android:ems="20"
                android:fontFamily="@font/roboto"
                android:inputType="textPersonName"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/textOcupacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/ocupation_txt"
                android:textColor="@color/blackMate"
                android:textSize="@dimen/subtitle_text"/>

            <EditText
                android:id="@+id/ocupacion_tutor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:inputType="textPersonName"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/textDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/description_txt"
                android:textColor="@color/blackMate"
                android:textSize="@dimen/subtitle_text"/>

            <EditText
                android:id="@+id/descripcion_tutor"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:gravity="top"
                android:inputType="textPersonName|textLongMessage|textMultiLine"
                android:padding="8dp"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/textCategorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:fontFamily="@font/roboto"
                android:text="@string/category_txt"
                android:textColor="@color/blackMate"
                android:textSize="@dimen/subtitle_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/categoria_arte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/art_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_idiomas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/languages_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_matematicas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/math_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_diseño"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/design_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_economia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/economy_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_habilidadesSociales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/social_abilities_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_fisica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/physics_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_computacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/computer_science"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_quimica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/chemistry_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_musica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/music_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_matematicasSuperior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/superiorMath_txt"
                    android:textSize="@dimen/normal_text"/>

                <CheckBox
                    android:id="@+id/categoria_cienciasSociales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/CienciasSociales_txt"
                    android:textSize="@dimen/normal_text"/>

            </LinearLayout>


            <Button
                android:id="@+id/guardar_tutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/button"
                android:fontFamily="@font/roboto"
                android:text="@string/btn_send_attributes"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/button_size_text"
                android:textStyle="bold"
                />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>