<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_margin"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/rate_tutor_txt"
        android:textAlignment="center"
        android:textColor="@color/blackMate"
        android:textSize="@dimen/big_text"
        android:textStyle="bold"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="0.5"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:theme="@style/RatingBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/action_cancelar"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_red_border"
            android:fontFamily="@font/roboto"
            android:text="@string/cancel_btn"
            android:textColor="@color/redBrick2"
            android:textSize="@dimen/button_size_text"
            android:textStyle="bold"
            android:layout_width="wrap_content" />

        <Button
            android:id="@+id/action_calificar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:layout_marginLeft="@dimen/medium_margin"
            android:fontFamily="@font/roboto"
            android:text="@string/rate_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/button_size_text"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>