<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/big_padding"
    tools:context=".ui.SolicitudActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/string_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubication_txt"
                android:textColor="@color/blackMate" />

            <EditText
                android:id="@+id/txt_direccion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/edittext_border"
                android:ems="20"
                android:inputType="textPersonName"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" />

            <TextView
                android:id="@+id/string_disciplina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/category_txt"
                android:textColor="@color/blackMate" />

            <EditText
                android:id="@+id/txt_categoria"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" />

            <TextView
                android:id="@+id/string_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/date_txt"
                android:textColor="@color/blackMate" />

            <EditText
                android:id="@+id/txt_fecha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" />

            <TextView
                android:id="@+id/string_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/time_txt"
                android:textColor="@color/blackMate" />

            <EditText
                android:id="@+id/txt_hora"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:focusable="false"
                android:inputType="time"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" />

            <TextView
                android:id="@+id/string_notas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/notas_tutor_txt"
                android:textColor="@color/blackMate" />

            <EditText
                android:id="@+id/notas_tutor"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:inputType="textPersonName|textMultiLine"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" />

            <Button
                android:id="@+id/action_solicitar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@color/soft_cyan"
                android:text="Enviar"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>