<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Change_password">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blackMate"
        android:textSize="@dimen/title_text"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Cambiar Contraseña"
        app:navigationIcon="@drawable/ic_keyboard_arrow_left"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/medium_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/change_pass"
                android:fontFamily="@font/roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/password_actual"
                android:textSize="@dimen/subtitle_text"
                android:textColor="@color/blackMate"
                />

            <EditText
                android:id="@+id/pass_change"
                android:fontFamily="@font/roboto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:textSize="@dimen/normal_text"
                android:background="@drawable/edittext_border"
                android:drawableEnd="@drawable/ic_edit"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                />

            <TextView
                android:id="@+id/change_pass1"
                android:fontFamily="@font/roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/new_pass"
                android:textColor="@color/blackMate"
                android:textSize="@dimen/subtitle_text"/>

            <EditText
                android:id="@+id/pass_new"
                android:fontFamily="@font/roboto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:drawableEnd="@drawable/ic_edit"
                android:inputType="textPassword"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:id="@+id/change_pass2"
                android:fontFamily="@font/roboto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/confirm_pass_txt"
                android:textColor="@color/blackMate"
                android:textSize="@dimen/subtitle_text"/>

            <EditText
                android:id="@+id/confirm_pass"
                android:fontFamily="@font/roboto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:drawableEnd="@drawable/ic_edit"
                android:inputType="textPassword"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:textSize="@dimen/normal_text"/>

            <Button
                android:id="@+id/modificar_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/button"
                android:text="@string/modify_txt"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/button_size_text"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
